selfhost/test/typechecker/map/error_type_mismatch_bindingdecl.3.out
Error at %FILE_NAME%:1:42
Type mismatch
  |  val m: Map<Int, String> = { (123): Option.None_, (456): Option.Some("hello") }
                                              ^
Expected: String
but instead found: <unknown>?
