selfhost/test/typechecker/map/error_type_mismatch_bindingdecl.3.abra
val m: Map<Int, String> = { (123): Option.None_, (456): Option.Some("hello") }